--- a/about.html
+++ b/about.html
@@ -79,6 +79,7 @@
                     <p>We are proud to be a part of the Kolkata community and are dedicated to giving back. We support local charities and organizations and are committed to making a positive impact in our community.</p>
                 </div>
             </div>
+        </div>    
     </div>
 
     <footer>
