--- a/menu.html
+++ b/menu.html
@@ -260,7 +260,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><img src="bchiken.jfif" alt="Main Course 1"> Butter Chicken</td>
+                                <td><img src="bchiken.jpeg" alt="Main Course 1"> Butter Chicken</td>
                                 <td>Succulent chicken pieces in a rich and creamy tomato-based gravy.</td>
                                 <td>₹450</td>
                             </tr>
