--- a/html/index.html
+++ b/html/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
         
     <header class="header-logo">
         <div >
-            <img src="logo.png" alt="Ghosh Kitchen Logo" class="logo-img">
+            <img src="../image/logo.png" alt="Ghosh Kitchen Logo" class="logo-img">
         </div>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -58,7 +58,7 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="mbiriyani.jpeg" class="d-block w-100" alt="Mutton Biriyani">
+                    <img src="../image/mbiriyani.jpeg" class="d-block w-100" alt="Mutton Biriyani">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Mutton Biriyani</h5>
                         <p>Mutton biryani is an aromatic rice dish made with layers of tender mutton pieces (or goat meat), fragrant basmati rice, deep fried onions and aromatic indian spices.</p>
@@ -66,21 +66,21 @@
                 </div>
                 
                 <div class="carousel-item">
-                    <img src="mocktail.jpeg" class="d-block w-100" alt="Freshly Made Mocktails">
+                    <img src="../image/mocktail.jpeg" class="d-block w-100" alt="Freshly Made Mocktails">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Freshly Made Mocktails</h5>
                         <p>Mocktails are specially crafted mixed drinks, usually by the bar program at restaurants or bars themselves, to be similar to cocktails but without liquor and other alcohol-based components.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="kabab.jpeg" class="d-block w-100" alt="Chicken Kebabs">
+                    <img src="../image/kabab.jpeg" class="d-block w-100" alt="Chicken Kebabs">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Chicken Kebabs</h5>
                         <p>Chicken Kebabs are juicy, flavorful ground meat. Ground meat is seasoned with herbs, warm spices, and aromatics, then skewered and grilled to perfection in the air fryer or oven.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="prawnmalai.jpeg" class="d-block w-100" alt="Prawn Malai Curry">
+                    <img src="../image/prawnmalai.jpeg" class="d-block w-100" alt="Prawn Malai Curry">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Prawn Malai Curry</h5>
                         <p>Chingri malai curry or malai chingri, also known as prawn malai curry, is a Bengali curry made from tiger (bagda) and king prawns (chingri) and coconut milk and flavoured with spices.</p>
