--- a/html/menu.html
+++ b/html/menu.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu - Ghosh Kitchen</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="../css/menu.css">
 </head>
 <body>
     
     <header class="header-logo">
         <div >
-            <img src="logo.png" alt="Ghosh Kitchen Logo" class="logo-img">
+            <img src="../image/logo.png" alt="Ghosh Kitchen Logo" class="logo-img">
         </div>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -86,17 +86,17 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><img src="virjin.jfif" alt="Mocktail 1"> Virgin Mojito</td>
+                                <td><img src="../image/virjin.jpeg" alt="Mocktail 1"> Virgin Mojito</td>
                                 <td>A refreshing mix of fresh mint leaves, lime, and soda, served chilled for a cool, tangy experience.</td>
                                 <td>₹149</td>
                             </tr>
                             <tr>
-                                <td><img src="blue.jfif" alt="Mocktail 2"> Blue Lagoon</td>
+                                <td><img src="../image/blue.jpeg" alt="Mocktail 2"> Blue Lagoon</td>
                                 <td>A vibrant blue mocktail with the tang of lemon and the sweetness of blue curacao, topped with soda.</td>
                                 <td>₹170</td>
                             </tr>
                             <tr>
-                                <td><img src="fruit.jfif" alt="Mocktail 3"> Fruit Punch</td>
+                                <td><img src="../image/fruit.jpeg" alt="Mocktail 3"> Fruit Punch</td>
                                 <td>A blend of tropical fruits and a dash of lime, making for a sweet and tangy beverage.</td>
                                 <td>₹130</td>
                             </tr>
@@ -115,17 +115,17 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><img src="chitikka.jfif" alt="Starter 1"> Chicken Tikka</td>
+                                <td><img src="../image/chitikka.jpeg" alt="Starter 1"> Chicken Tikka</td>
                                 <td>Juicy chicken pieces marinated in a blend of yogurt and spices, grilled to perfection.</td>
                                 <td>₹349</td>
                             </tr>
                             <tr>
-                                <td><img src="panetikka.jfif" alt="Starter 2"> Paneer Tikka</td>
+                                <td><img src="../image/panetikka.jpeg" alt="Starter 2"> Paneer Tikka</td>
                                 <td>Soft paneer cubes marinated with a spicy yogurt mix, grilled to a smoky finish.</td>
                                 <td>₹399</td>
                             </tr>
                             <tr>
-                                <td><img src="vegspring.jfif" alt="Starter 3"> Veg Spring Rolls</td>
+                                <td><img src="../image/vegspring.jpeg" alt="Starter 3"> Veg Spring Rolls</td>
                                 <td>Crispy rolls filled with a mix of vegetables and noodles, served with a sweet chili sauce.</td>
                                 <td>₹299</td>
                             </tr>
@@ -144,17 +144,17 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><img src="tsoup.jfif" alt="Soup 1"> Tomato Soup</td>
+                                <td><img src="../image/tsoup.jpeg" alt="Soup 1"> Tomato Soup</td>
                                 <td>A creamy tomato soup with fresh basil, perfect as a light starter.</td>
                                 <td>₹280</td>
                             </tr>
                             <tr>
-                                <td><img src="chisoup.jfif" alt="Soup 2"> Chicken Soup</td>
+                                <td><img src="../image/chisoup.jpeg" alt="Soup 2"> Chicken Soup</td>
                                 <td>Warm chicken broth with tender chicken pieces and vegetables.</td>
                                 <td>₹320</td>
                             </tr>
                             <tr>
-                                <td><img src="mansoup.jfif" alt="Soup 3"> Manchow Soup</td>
+                                <td><img src="../image/mansoup.jpeg" alt="Soup 3"> Manchow Soup</td>
                                 <td>A spicy and tangy soup with a mix of vegetables, served with crispy noodles.</td>
                                 <td>₹300</td>
                             </tr>
@@ -173,17 +173,17 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><img src="nan.jfif" alt="Bread 1"> Naan</td>
+                                <td><img src="../image/nan.jpeg" alt="Bread 1"> Naan</td>
                                 <td>Soft and fluffy Indian flatbread, perfect to pair with any curry.</td>
                                 <td>₹45</td>
                             </tr>
                             <tr>
-                                <td><img src="garlicnan.jfif" alt="Bread 2"> Garlic Naan</td>
+                                <td><img src="../image/garlicnan.jpeg" alt="Bread 2"> Garlic Naan</td>
                                 <td>Buttery naan topped with minced garlic and fresh herbs.</td>
                                 <td>₹60</td>
                             </tr>
                             <tr>
-                                <td><img src="roti.jfif" alt="Bread 3"> Roti</td>
+                                <td><img src="../image/roti.jpeg" alt="Bread 3"> Roti</td>
                                 <td>Whole wheat flatbread, a staple in Indian cuisine.</td>
                                 <td>₹25</td>
                             </tr>
@@ -202,17 +202,17 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><img src="chibiri.jfif" alt="Rice 1">Chicken Biryani</td>
+                                <td><img src="../image/chibiri.jpeg" alt="Rice 1">Chicken Biryani</td>
                                 <td>Fragrant basmati rice cooked with spices, chicken, and saffron.</td>
                                 <td>₹400</td>
                             </tr>
                             <tr>
-                                <td><img src="friedrice.jfif" alt="Rice 2"> Fried Rice</td>
+                                <td><img src="../image/friedrice.jpeg" alt="Rice 2"> Fried Rice</td>
                                 <td>Stir-fried rice with vegetables, eggs, and a touch of soy sauce.</td>
                                 <td>₹300</td>
                             </tr>
                             <tr>
-                                <td><img src="rice.jfif" alt="Rice 3"> Steamed Rice</td>
+                                <td><img src="../image/rice.jpeg" alt="Rice 3"> Steamed Rice</td>
                                 <td>Simple and fluffy steamed basmati rice.</td>
                                 <td>₹180</td>
                             </tr>
@@ -231,17 +231,17 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><img src="hakka.jfif" alt="Noodles 1"> Hakka Noodles</td>
+                                <td><img src="../image/hakka.jpeg" alt="Noodles 1"> Hakka Noodles</td>
                                 <td>Stir-fried noodles with vegetables and soy sauce, a Chinese favorite.</td>
                                 <td>₹320</td>
                             </tr>
                             <tr>
-                                <td><img src="chow.jfif" alt="Noodles 2"> Chow Mein</td>
+                                <td><img src="../image/chow.jpeg" alt="Noodles 2"> Chow Mein</td>
                                 <td>Fried noodles with a mix of vegetables, tossed in soy and chili sauce.</td>
                                 <td>₹300</td>
                             </tr>
                             <tr>
-                                <td><img src="padthai.jfif" alt="Noodles 3"> Pad Thai</td>
+                                <td><img src="../image/padthai.jpeg" alt="Noodles 3"> Pad Thai</td>
                                 <td>A classic Thai noodle dish with peanuts, lime, and tofu.</td>
                                 <td>₹350</td>
                             </tr>
@@ -260,17 +260,17 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><img src="bchiken.jfif" alt="Main Course 1"> Butter Chicken</td>
+                                <td><img src="../image/bchiken.jpeg" alt="Main Course 1"> Butter Chicken</td>
                                 <td>Succulent chicken pieces in a rich and creamy tomato-based gravy.</td>
                                 <td>₹450</td>
                             </tr>
                             <tr>
-                                <td><img src="panerbutter.jfif" alt="Main Course 2"> Paneer Butter Masala</td>
+                                <td><img src="../image/panerbutter.jpeg" alt="Main Course 2"> Paneer Butter Masala</td>
                                 <td>Cottage cheese cubes cooked in a creamy tomato and butter sauce.</td>
                                 <td>₹400</td>
                             </tr>
                             <tr>
-                                <td><img src="dal.jfif" alt="Main Course 3"> Dal Makhani</td>
+                                <td><img src="../image/dal.jpeg" alt="Main Course 3"> Dal Makhani</td>
                                 <td>A creamy lentil dish cooked with butter and cream, a North Indian favorite.</td>
                                 <td>₹350</td>
                             </tr>
@@ -289,17 +289,17 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><img src="gulab.jfif" alt="Dessert 1"> Gulab Jamun</td>
+                                <td><img src="../image/gulab.jpeg" alt="Dessert 1"> Gulab Jamun</td>
                                 <td>Soft fried dough balls soaked in sugar syrup, served warm.</td>
                                 <td>₹100</td>
                             </tr>
                             <tr>
-                                <td><img src="rasmalai.jfif" alt="Dessert 2"> Ice Cream</td>
+                                <td><img src="../image/ice.jpeg" alt="Dessert 2"> Ice Cream</td>
                                 <td>Creamy vanilla ice cream topped with rich chocolate sauce.</td>
                                 <td>₹90</td>
                             </tr>
                             <tr>
-                                <td><img src="ice.jfif" alt="Dessert 3"> Ras Malai</td>
+                                <td><img src="../image/rasmalai.jpeg" alt="Dessert 3"> Ras Malai</td>
                                 <td>Soft cheese patties soaked in sweetened milk flavored with cardamom.</td>
                                 <td>₹130</td>
                             </tr>
