--- a/reviews.html
+++ b/reviews.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reviews - Ghosh Kitchen</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/review.css">
+    <link rel="stylesheet" href="review.css">
 </head>
 <body>
     
     <header class="header-logo">
         <div >
-            <img src="../image/logo.png" alt="Ghosh Kitchen Logo" class="logo-img">
+            <img src="logo.png" alt="Ghosh Kitchen Logo" class="logo-img">
         </div>
     </header>
 
@@ -49,7 +49,7 @@
 
             <div class="review">
                 <div class="d-flex align-items-center mb-3">
-                    <img src="../image/cus-1.jpeg" alt="Customer Photo" class="rounded-circle me-3">
+                    <img src="cus-1.jpeg" alt="Customer Photo" class="rounded-circle me-3">
                     <div>
                         <h5 class="mb-0">Ritashree Roy</h5>
                         <small class="text-muted">April 15, 2024</small>
@@ -60,7 +60,7 @@
 
             <div class="review mt-4">
                 <div class="d-flex align-items-center mb-3">
-                    <img src="../image/cus-2.jpg" alt="Customer Photo" class="rounded-circle me-3">
+                    <img src="cus-2.jpg" alt="Customer Photo" class="rounded-circle me-3">
                     <div>
                         <h5 class="mb-0">Akash Dutta</h5>
                         <small class="text-muted">March 22, 2024</small>
@@ -71,7 +71,7 @@
 
             <div class="review mt-4">
                 <div class="d-flex align-items-center mb-3">
-                    <img src="../image/cus-3.png" alt="Customer Photo" class="rounded-circle me-3">
+                    <img src="cus-3.png" alt="Customer Photo" class="rounded-circle me-3">
                     <div>
                         <h5 class="mb-0">Moumita Saha</h5>
                         <small class="text-muted">February 10, 2024</small>
