--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - GHOSH KITCHEN</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
         
     <header class="header-logo">
         <div >
-            <img src="../image/logo.png" alt="Ghosh Kitchen Logo" class="logo-img">
+            <img src="logo.png" alt="Ghosh Kitchen Logo" class="logo-img">
         </div>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -53,7 +53,7 @@
                 <p>Established in 2022, Ghosh Kitchen  has been a cornerstone in the Kolkata community. Founded by Soumyaneel Ghosh, our restaurant has been committed to delivering a dining experience that is second to none. We pride ourselves on our authentic recipes, which have been passed down through generations, and our commitment to using the freshest ingredients.</p>
             </div>
             <div class="col-md-2">
-                <img src="../image/Picture1.png" alt="Chef" class="chef-photo">
+                <img src="Picture1.png" alt="Chef" class="chef-photo">
             </div>
         </div>
     </div>
