--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Ghosh Kitchen</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/contact.css" rel="stylesheet">
+    <link href="contact.css" rel="stylesheet">
 </head>
 <body>
         
     <header class="header-logo">
         <div >
-            <img src="../image/logo.png" alt="Ghosh Kitchen Logo" class="logo-img">
+            <img src="logo.png" alt="Ghosh Kitchen Logo" class="logo-img">
         </div>
     </header>
     
@@ -111,7 +111,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/contact.js"></script>
+    <script src="contact.js"></script>
 
 </body>
 </html>
