--- a/contact.html
+++ b/contact.html
@@ -73,16 +73,25 @@
             </div>
             <button type="submit" class="btn btn-primary btn-center mt-4">Submit</button>
         </form>
-
-        <div id="UserModal" class="modal">
-            <div class="modal-content">
-                <h3>Thank you for your submission!</h3>
-                <h2>We will get back to you really soon....</h2>
-
-                <p id="userData"></p>
-                <button class="btn btn-primary" id="okButton">okay</button>
+        <div id="confirmationModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Thank you for your submission!</h5>
+                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p id="userData"></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" id="okButton" data-bs-dismiss="modal">Okay</button>
+                    </div>
+                </div>
             </div>
         </div>
+            
     </div>
 
     <footer>
