--- a/reviews.html
+++ b/reviews.html
@@ -51,7 +51,7 @@
                 <div class="d-flex align-items-center mb-3">
                     <img src="cus-1.jpeg" alt="Customer Photo" class="rounded-circle me-3">
                     <div>
-                        <h5 class="mb-0">Ri Roy</h5>
+                        <h5 class="mb-0">Gita Roy</h5>
                         <small class="text-muted">April 15, 2024</small>
                     </div>
                 </div>
