--- a/about.html
+++ b/about.html
@@ -83,8 +83,8 @@
     </div>
 
     <footer>
-        <div class="container mt-2 ">
-            <div class="row ">
+        <div class="container mt-2">
+            <div class="row">
                 <div class="col-md-6 mt-4">
                     <h5>Hours</h5>
                     <p>Monday - Friday: 11am - 10pm</p>
@@ -104,7 +104,9 @@
                 </div>
             </div>
         </div>
-    </footer>    
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
