--- a/menu.html
+++ b/menu.html
@@ -310,10 +310,9 @@
 
         </section>
     </div>
-
     <footer>
-        <div class="container mt-2 ">
-            <div class="row ">
+        <div class="container mt-2">
+            <div class="row">
                 <div class="col-md-6 mt-4">
                     <h5>Hours</h5>
                     <p>Monday - Friday: 11am - 10pm</p>
@@ -326,6 +325,7 @@
                     <p>Address: 123 Food Street, Kolkata, India</p>
                 </div>
             </div>
+            <hr>
             <div class="row">
                 <div class="col-md-12">
                     <p>&copy; 2025 Ghosh Kitchen. All rights reserved.</p>
@@ -334,6 +334,7 @@
         </div>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
